# sentry-rice

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  rubric.example.md
.github/workflows/: ci.yml  publish.yml
examples/acme/: config.yaml  rubric.md
src/sentryrice/: __init__.py  claude.py  cli.py  config.py  db.py  scaffold.py  scoring.py  sentry.py  store.py
src/sentryrice/claude_templates/commands/: reclassify.md  reimport.md  score-issue.md
src/sentryrice/claude_templates/workflows/: score-issues.js
src/sentryrice/data/: config.example.yaml
src/sentryrice/web/: __init__.py
src/sentryrice/web/templates/: _table.html  about.html  base.html  disagreements.html  index.html
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_scoring.py  test_sentry.py  test_store.py  test_web.py
